Fix collapse button

--- a/QA.ProductCatalog.Admin.WebApp/ClientApp/Components/FieldEditors/RelationFieldTabs/RelationFieldTabs.scss
+++ b/QA.ProductCatalog.Admin.WebApp/ClientApp/Components/FieldEditors/RelationFieldTabs/RelationFieldTabs.scss
@@ -7,6 +7,11 @@
   > .pt-button-group {
     flex: none;
   }
+
+  > .pt-button {
+    min-width: 110px;
+    justify-content: space-between;
+  }
 }
 
 .multi-relation-field-tabs {
